# ai-agent-radar

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml  weekly.yml
.superpowers/sdd/: task-5-report.md  task-8-report.md
config/: radar.yaml
data/snapshots/: 2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
data/state/: sources.json
docs/superpowers/plans/: 2026-07-20-ai-agent-radar.md  2026-07-23-telegram-daily-delivery.md  2026-07-24-telegram-chinese-introductions.md  2026-07-24-telegram-growth-top10.md
docs/superpowers/specs/: 2026-07-20-ai-agent-radar-design.md  2026-07-23-telegram-daily-delivery-design.md  2026-07-24-telegram-growth-top10-design.md
reports/daily/: 2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md
reports/weekly/: 2026-W30.md
scripts/: __init__.py  configure_telegram.py
src/ai_agent_radar/: __init__.py  cli.py  config.py  filtering.py  github.py  models.py  news.py  normalize.py  notifications.py  pipeline.py  publish.py  reporting.py  scoring.py  snapshots.py  state.py  summarize.py  telegram.py  trends.py
tests/: conftest.py  test_cli.py  test_config.py  test_configure_telegram.py  test_filtering.py  test_github.py  test_news.py  test_notifications.py  test_pipeline.py  test_publish.py  test_reporting.py  test_scoring.py  test_snapshots_trends.py  test_state.py  test_summarize.py  test_telegram.py  test_workflows.py
tests/fixtures/: github_search.json  openai_feed.xml
tests/golden/: daily.md  daily_empty_categories.md  weekly.md
