[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ai-agent-radar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.13,<5",
  "feedparser>=6.0,<7",
  "httpx>=0.28,<1",
  "pydantic>=2.10,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "ruff>=0.11,<1"]

[project.scripts]
ai-agent-radar = "ai_agent_radar.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_agent_radar"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
